correction css + ajout de id pour le menu version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -689,7 +689,7 @@ footer div ul li {
         margin-left: -15px;
     }
     #bouton-activite {
-        padding-left: 60px;
+        padding-left: 65px;
     }
     ul li {
         list-style: none;
